<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.mbcoppol.program01.CourseActivity"
    android:rowCount="13"
    android:orientation="vertical"
    android:layout_gravity="fill_horizontal"
    android:columnCount="3">


    <TextView
        android:layout_width="142dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/semester"
        android:id="@+id/semester"
        android:textSize="30sp"
        android:layout_row="1"
        android:layout_column="0"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/textView17"
        android:layout_row="0"
        android:layout_column="0" />

    <TextView
        android:layout_width="124dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/compInfoSys"
        android:id="@+id/year2"
        android:textSize="30sp"
        android:layout_row="1"
        android:layout_column="1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fall1"
        android:id="@+id/fall1"
        android:layout_row="2"
        android:layout_column="0" />

    <TextView
        android:layout_width="107dp"
        android:layout_height="56dp"
        android:text="@string/fallclass1"
        android:id="@+id/classfall1"
        android:layout_row="2"
        android:layout_column="1" />

    <TextView
        android:layout_width="106dp"
        android:layout_height="56dp"
        android:text="@string/csfallclass1"
        android:id="@+id/textView4"
        android:layout_row="2"
        android:layout_column="2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/winter1"
        android:id="@+id/winter1"
        android:layout_row="3"
        android:layout_column="0" />

    <TextView
        android:layout_width="102dp"
        android:layout_height="56dp"
        android:text="@string/winterclass1"
        android:id="@+id/textView"
        android:layout_row="3"
        android:layout_column="1" />

    <TextView
        android:layout_width="106dp"
        android:layout_height="wrap_content"
        android:text="@string/cswinterclass1"
        android:id="@+id/textView10"
        android:layout_row="3"
        android:layout_column="2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fall2"
        android:id="@+id/fall2"
        android:layout_row="4"
        android:layout_column="0" />

    <TextView
        android:layout_width="120dp"
        android:layout_height="42dp"
        android:text="@string/fallclass2"
        android:id="@+id/textView2"
        android:layout_row="4"
        android:layout_column="1" />

    <TextView
        android:layout_width="106dp"
        android:layout_height="wrap_content"
        android:text="@string/csfallclass2"
        android:id="@+id/textView11"
        android:layout_row="4"
        android:layout_column="2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/winter2"
        android:id="@+id/winter2"
        android:layout_row="5"
        android:layout_column="0" />

    <TextView
        android:layout_width="120dp"
        android:layout_height="38dp"
        android:text="@string/winterclass2"
        android:id="@+id/textView3"
        android:layout_row="5"
        android:layout_column="1" />

    <TextView
        android:layout_width="107dp"
        android:layout_height="wrap_content"
        android:text="@string/cswinterclass2"
        android:id="@+id/textView12"
        android:layout_row="5"
        android:layout_column="2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fall3"
        android:id="@+id/fall3"
        android:layout_row="6"
        android:layout_column="0" />

    <TextView
        android:layout_width="120dp"
        android:layout_height="56dp"
        android:text="@string/fallclass3"
        android:id="@+id/textView5"
        android:layout_row="6"
        android:layout_column="1" />

    <TextView
        android:layout_width="104dp"
        android:layout_height="wrap_content"
        android:text="@string/csfallclass3"
        android:id="@+id/textView13"
        android:layout_row="6"
        android:layout_column="2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/winter3"
        android:id="@+id/winter3"
        android:layout_row="7"
        android:layout_column="0" />

    <TextView
        android:layout_width="107dp"
        android:layout_height="57dp"
        android:text="@string/winterclass3"
        android:id="@+id/textView6"
        android:layout_row="7"
        android:layout_column="1" />

    <TextView
        android:layout_width="107dp"
        android:layout_height="wrap_content"
        android:text="@string/cswinterclass3"
        android:id="@+id/textView14"
        android:layout_row="7"
        android:layout_column="2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fall4"
        android:id="@+id/fall4"
        android:layout_row="8"
        android:layout_column="0" />

    <TextView
        android:layout_width="110dp"
        android:layout_height="42dp"
        android:text="@string/fallclass4"
        android:id="@+id/textView7"
        android:layout_row="8"
        android:layout_column="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/csfallclass4"
        android:id="@+id/textView15"
        android:layout_row="8"
        android:layout_column="2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/winter4"
        android:id="@+id/winter4"
        android:layout_row="9"
        android:layout_column="0" />

    <TextView
        android:layout_width="58dp"
        android:layout_height="wrap_content"
        android:text="@string/winterclass4"
        android:id="@+id/textView8"
        android:layout_row="9"
        android:layout_column="1" />

    <TextView
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/compSci"
        android:id="@+id/year3"
        android:textSize="30sp"
        android:layout_row="1"
        android:layout_column="2"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cswinterclass4"
        android:id="@+id/textView16"
        android:layout_row="9"
        android:layout_column="2" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/disclaimer"
        android:id="@+id/disclaimer"
        android:textStyle="bold"
        android:layout_row="10"
        android:layout_column="0"
        android:layout_columnSpan="3" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/carot"
        android:textStyle="bold"
        android:id="@+id/textView9"
        android:layout_row="11"
        android:layout_column="0"
        android:layout_columnSpan="3" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:text="@string/back"
        android:id="@+id/button"
        android:layout_row="12"
        android:layout_column="0"
        android:layout_gravity="fill_horizontal"
        android:onClick="returntomain"/>

</GridLayout>
