<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.mbcoppol.program01.MissionActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mission"
        android:maxLines="10"
        android:id="@+id/mission_statement"
        android:layout_below="@+id/titleMission"
        android:layout_alignParentStart="true"
        android:scrollbars="vertical"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/titleMission"
        android:textSize="24sp"
        android:textStyle="bold"
        android:fontFamily="monospace" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/faculty"
        android:id="@+id/faculty"
        android:onClick="loadFaculty"
        android:layout_above="@+id/course"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/courses"
        android:id="@+id/course"
        android:onClick="loadCourse"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/commontitle"
        android:id="@+id/commontitle"
        android:textSize="24sp"
        android:textStyle="bold"
        android:fontFamily="monospace"
        android:layout_below="@+id/mission_statement"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/commoncourses"
        android:id="@+id/commoncourses"
        android:layout_below="@+id/commontitle"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/differencetitle"
        android:textSize="24sp"
        android:textStyle="bold"
        android:fontFamily="monospace"
        android:id="@+id/difference"
        android:layout_below="@+id/commoncourses"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CSISdifferences"
        android:id="@+id/CSISdifference"
        android:layout_below="@+id/difference"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
