<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.mbcoppol.program01.FacultyActivity"
    android:scrollbars="vertical"
    android:orientation="vertical"
    android:weightSum="1">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <ImageView
        android:layout_width="115dp"
        android:layout_height="173dp"
        android:id="@+id/corserImage"
        android:src="@drawable/corser"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/george_corser"
        android:id="@+id/corserName"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/corserbio"
        android:id="@+id/corserBio" />

    <ImageView
        android:layout_width="115dp"
        android:layout_height="173dp"
        android:id="@+id/choImage"
        android:src="@drawable/cho"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/il_hyung_cho"
        android:id="@+id/choName" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chobio"
        android:id="@+id/choBio" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/khandaker_abir_rahman"
        android:id="@+id/rahmanName" />

    <ImageView
        android:layout_width="115dp"
        android:layout_height="173dp"
        android:id="@+id/rahmanImage"
        android:src="@drawable/rahman"
        android:layout_weight="0.11" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rahmanbio"
        android:id="@+id/rahmanBio" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:id="@+id/backbutton"
        android:onClick="returntomain"/>

    <include layout="@layout/content_faculty" />


</LinearLayout>
</ScrollView>